// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemTabBar /> 1`] = `
<View
  style={
    Object {
      "height": 24,
      "margin": 5,
      "width": 24,
    }
  }
>
  <FontAwesome
    color="#000000"
    name="home"
    size={26}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF3300",
        "borderRadius": 6,
        "height": 12,
        "justifyContent": "center",
        "position": "absolute",
        "right": -6,
        "top": -3,
        "width": 12,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 10,
          "fontWeight": "bold",
        }
      }
    >
      1
    </Text>
  </View>
</View>
`;

exports[`<MastoRow /> 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "paddingBottom": 5,
        "paddingTop": 8,
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 12,
              "textAlign": "right",
            },
            Object {
              "color": "#8899a6",
            },
          ]
        }
      >
         
        <FontAwesome
          color="#657786"
          name="globe"
          size={12}
          style={
            Object {
              "marginRight": 5,
            }
          }
        />
         2019/12/08 12:48:33
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "green",
          "borderWidth": 0,
          "flex": 1,
          "flexDirection": "row",
          "height": "auto",
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "yellow",
            "borderWidth": 0,
            "flexDirection": "column",
            "width": 68,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 50,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://files.mastodon.social/accounts/avatars/000/000/001/original/d96d39a0abb45b92.jpg",
                  }
                }
                style={
                  Object {
                    "borderRadius": 5,
                    "bottom": 0,
                    "height": 50,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 50,
                  }
                }
                testID="RNE__Image"
                theme={
                  Object {
                    "colors": Object {
                      "grey0": "#657786",
                      "grey1": "#2b90d9",
                      "grey2": "#8899a6",
                      "platform": Object {
                        "android": Object {},
                        "ios": Object {},
                      },
                      "primary": "#FF3300",
                    },
                    "customColors": Object {
                      "char": "#000000",
                      "charBackground": "#FFFFFF",
                      "charReverse": "#FFFFFF",
                      "item": Object {
                        "bookmark": "#4c6ef5",
                        "boost": "#2b90d9",
                        "favourite": "#ffd27d",
                        "none": "#8899a6",
                      },
                      "link": "#1b95e0",
                      "primaryBackground": "#FFFFFF",
                      "primaryComplementary": "#00CCFF",
                      "tootButton": "#FF5500",
                    },
                  }
                }
                transition={true}
              />
              <View
                accessibilityElementsHidden={true}
                collapsable={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#bdbdbd",
                      "borderRadius": 5,
                      "height": 50,
                      "justifyContent": "center",
                      "width": 50,
                    }
                  }
                  testID="RNE__Image__placeholder"
                />
              </View>
              <View
                style={
                  Object {
                    "borderRadius": 5,
                    "height": 50,
                    "width": 50,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "yellow",
            "borderWidth": 0,
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "borderWidth": 0,
            }
          }
        >
          <View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                  Object {
                    "color": "#000000",
                  },
                ]
              }
            >
              Eugen
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 15,
                      "fontWeight": "normal",
                    },
                    Object {
                      "color": "#8899a6",
                    },
                  ]
                }
              >
                 @Gargron
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "borderWidth": 0,
              "flex": 1,
              "marginTop": 2,
            }
          }
        >
          <View
            injectViewProps={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 16,
                    "paddingRight": 10,
                    "paddingTop": 2,
                  },
                  Object {
                    "color": "#000000",
                  },
                ]
              }
            >
              "I lost my inheritance with one wrong digit on my sort code"

 
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Array [
                      Object {
                        "fontSize": 16,
                        "paddingRight": 10,
                        "paddingTop": 2,
                      },
                      Object {
                        "color": "#000000",
                      },
                    ],
                    Object {
                      "color": "#1b95e0",
                    },
                  ]
                }
              >
                https://www.theguardian.com/money/2019/dec/07/i-lost-my-193000-inheritance-with-one-wrong-digit-on-my-sort-code
              </Text>
              &lt;/span}
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginBottom": 5,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "paddingRight": 10,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
            >
              <FontAwesome
                color="#8899a6"
                name="reply"
                size={20}
              />
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "paddingRight": 10,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1,
                  "opacity": 1,
                  "paddingRight": 10,
                }
              }
            >
              <FontAwesome
                color="#8899a6"
                name="retweet"
                size={20}
              />
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#657786",
                    "fontSize": 16,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "paddingRight": 10,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1,
                  "opacity": 1,
                  "paddingRight": 10,
                }
              }
            >
              <FontAwesome
                color="#8899a6"
                name="star"
                size={20}
              />
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#657786",
                    "fontSize": 16,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "paddingRight": 10,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1,
                  "opacity": 1,
                  "paddingRight": 10,
                }
              }
            >
              <FontAwesome
                color="#8899a6"
                name="bookmark"
                size={20}
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "paddingRight": 10,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1,
                  "opacity": 1,
                  "paddingRight": 10,
                }
              }
            >
              <FontAwesome
                color="#8899a6"
                name="ellipsis-h"
                size={20}
              />
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<MastoRowBody /> 1`] = `
<View
  injectViewProps={[Function]}
>
  <Text
    style={Object {}}
  >
    "I lost my inheritance with one wrong digit on my sort code"

 
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {},
          Object {
            "color": "#1b95e0",
          },
        ]
      }
    >
      https://www.theguardian.com/money/2019/dec/07/i-lost-my-193000-inheritance-with-one-wrong-digit-on-my-sort-code
    </Text>
    &lt;/span}
  </Text>
</View>
`;

exports[`<MastoRowImage /> 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 5,
        "paddingRight": 5,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      blurRadius={0}
      source={
        Object {
          "uri": "https://files.mastodon.social/media_attachments/files/022/345/792/small/57859aede991da25.jpeg",
        }
      }
      style={
        Object {
          "borderColor": "#8899a6",
          "borderRadius": 5,
          "borderWidth": 1,
          "flex": 0.5,
          "height": 140,
          "marginBottom": 2,
          "marginTop": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`<MastoRowPoll /> 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginLeft": 10,
      "marginRight": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    accept
     - 
    6
    votes
     (
    60%
    )
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    deny
     - 
    4
    votes
     (
    40%
    )
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#657786",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    (10 votes)
     - 
    Ended
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#8899a6",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 5,
          },
          Object {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Reload
    </Text>
  </View>
</View>
`;

exports[`<OpenSticker /> 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "height": "auto",
      "marginBottom": 2,
      "marginTop": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": 68,
        },
        Object {
          "backgroundColor": "#26a",
        },
      ]
    }
  />
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      Object {
        "colors": Array [
          4280444586,
          4294967295,
        ],
        "endPoint": Array [
          1,
          0,
        ],
        "locations": undefined,
        "startPoint": Array [
          0,
          0,
        ],
      }
    }
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "fontSize": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://s.0px.io/a/md",
          }
        }
        style={
          Object {
            "height": 15,
            "marginRight": 4,
            "width": 15,
          }
        }
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        mastodon.potproject.net
      </Text>
    </View>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`<Search /> 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "borderBottomColor": "#e1e1e1",
        "borderBottomWidth": 1,
        "borderTopColor": "#e1e1e1",
        "borderTopWidth": 1,
        "padding": 8,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 0,
          "width": "100%",
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderBottomWidth": 0,
            "borderColor": undefined,
            "borderRadius": 3,
            "flexDirection": "row",
            "minHeight": 30,
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "marginLeft": 8,
              "marginVertical": 4,
              "paddingRight": 4,
            }
          }
        >
          <Icon
            name="search"
            size={18}
            type="material"
          />
        </View>
        <TextInput
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Search"
          platform="default"
          style={
            Object {
              "alignSelf": "center",
              "color": undefined,
              "flex": 1,
              "fontSize": 18,
              "marginLeft": 10,
              "minHeight": 40,
            }
          }
          testID="searchInput"
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "marginRight": 8,
              "marginVertical": 4,
              "paddingRight": 4,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": undefined,
            "fontSize": 12,
            "height": 0,
            "margin": 0,
            "padding": 0,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "borderRightColor": undefined,
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
        testID="buttonGroupItem"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FF3300",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fff",
                "fontSize": 16.25,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            Accounts
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderRightColor": undefined,
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
        testID="buttonGroupItem"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#8899a6",
                "fontSize": 16.25,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            Toots
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
        testID="buttonGroupItem"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#8899a6",
                "fontSize": 16.25,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            HashTags
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<SearchList /> 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<TimelineCenterHeader /> 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingTop": 4,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://files.mastodon.social/accounts/avatars/000/023/634/original/6ca8804dc46800ad.png",
        }
      }
      style={
        Object {
          "borderRadius": 15,
          "height": 30,
          "marginRight": 5,
          "width": 30,
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "alignSelf": "center",
          "color": "#FFFFFF",
          "fontWeight": "bold",
          "height": 30,
          "width": 200,
        }
      }
    >
      noiob
      @
      mastodon.server.net
    </Text>
  </View>
</View>
`;

exports[`<TimelineLeftHeader isBack={false} /> 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <FontAwesome
      color="#FFFFFF"
      name="bars"
      size={20}
    />
  </View>
</View>
`;

exports[`<TimelineLeftHeader isBack={true} /> 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <FontAwesome
      color="#FFFFFF"
      name="chevron-left"
      size={20}
    />
  </View>
</View>
`;

exports[`<TimelineTootButton /> 1`] = `
<View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <FontAwesome
      color="#FFFFFF"
      name="pencil"
      size={24}
    />
  </View>
</View>
`;

exports[`<TootButton /> 1`] = `
<View
  style={
    Object {
      "elevation": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 5,
        "width": 0,
      },
      "shadowOpacity": 0.34,
      "shadowRadius": 6.27,
    }
  }
>
  <Icon
    color="#FF5500"
    name="pencil"
    onPress={[Function]}
    raised={true}
    reverse={true}
    size={28}
    type="font-awesome"
  />
</View>
`;

exports[`<TootImageClip /> 1`] = `
<RCTScrollView
  horizontal={true}
>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": undefined,
          },
          Object {
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#657786",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginLeft": 5,
            "marginRight": 5,
            "opacity": 1,
            "width": 70,
          }
        }
      >
        <FontAwesome
          color="#2b90d9"
          name="plus-circle"
          size={26}
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<VisibilityModal /> 1`] = `
<View
  style={
    Object {
      "height": 260,
      "width": 300,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderBottomWidth": 0.5,
          "borderColor": undefined,
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="padView"
    >
      <FontAwesome
        color="#2b90d9"
        name="globe"
        size={26}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 16,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "grey0": "#657786",
              "grey1": "#2b90d9",
              "grey2": "#8899a6",
              "platform": Object {
                "android": Object {},
                "ios": Object {},
              },
              "primary": "#FF3300",
            },
            "customColors": Object {
              "char": "#000000",
              "charBackground": "#FFFFFF",
              "charReverse": "#FFFFFF",
              "item": Object {
                "bookmark": "#4c6ef5",
                "boost": "#2b90d9",
                "favourite": "#ffd27d",
                "none": "#8899a6",
              },
              "link": "#1b95e0",
              "primaryBackground": "#FFFFFF",
              "primaryComplementary": "#00CCFF",
              "tootButton": "#FF5500",
            },
          }
        }
      >
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          public
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 15,
            }
          }
          testID="listItemTitle"
        >
          Post to public timelines
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderBottomWidth": 0.5,
          "borderColor": undefined,
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="padView"
    >
      <FontAwesome
        color="#2b90d9"
        name="unlock"
        size={26}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 16,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "grey0": "#657786",
              "grey1": "#2b90d9",
              "grey2": "#8899a6",
              "platform": Object {
                "android": Object {},
                "ios": Object {},
              },
              "primary": "#FF3300",
            },
            "customColors": Object {
              "char": "#000000",
              "charBackground": "#FFFFFF",
              "charReverse": "#FFFFFF",
              "item": Object {
                "bookmark": "#4c6ef5",
                "boost": "#2b90d9",
                "favourite": "#ffd27d",
                "none": "#8899a6",
              },
              "link": "#1b95e0",
              "primaryBackground": "#FFFFFF",
              "primaryComplementary": "#00CCFF",
              "tootButton": "#FF5500",
            },
          }
        }
      >
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          unlisted
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 15,
            }
          }
          testID="listItemTitle"
        >
          Do not post to public timelines
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderBottomWidth": 0.5,
          "borderColor": undefined,
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="padView"
    >
      <FontAwesome
        color="#2b90d9"
        name="lock"
        size={26}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 16,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "grey0": "#657786",
              "grey1": "#2b90d9",
              "grey2": "#8899a6",
              "platform": Object {
                "android": Object {},
                "ios": Object {},
              },
              "primary": "#FF3300",
            },
            "customColors": Object {
              "char": "#000000",
              "charBackground": "#FFFFFF",
              "charReverse": "#FFFFFF",
              "item": Object {
                "bookmark": "#4c6ef5",
                "boost": "#2b90d9",
                "favourite": "#ffd27d",
                "none": "#8899a6",
              },
              "link": "#1b95e0",
              "primaryBackground": "#FFFFFF",
              "primaryComplementary": "#00CCFF",
              "tootButton": "#FF5500",
            },
          }
        }
      >
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          private
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 15,
            }
          }
          testID="listItemTitle"
        >
          Post to followers only
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderColor": undefined,
          "flexDirection": "row",
          "padding": 14,
        }
      }
      testID="padView"
    >
      <FontAwesome
        color="#2b90d9"
        name="envelope"
        size={26}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 16,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "grey0": "#657786",
              "grey1": "#2b90d9",
              "grey2": "#8899a6",
              "platform": Object {
                "android": Object {},
                "ios": Object {},
              },
              "primary": "#FF3300",
            },
            "customColors": Object {
              "char": "#000000",
              "charBackground": "#FFFFFF",
              "charReverse": "#FFFFFF",
              "item": Object {
                "bookmark": "#4c6ef5",
                "boost": "#2b90d9",
                "favourite": "#ffd27d",
                "none": "#8899a6",
              },
              "link": "#1b95e0",
              "primaryBackground": "#FFFFFF",
              "primaryComplementary": "#00CCFF",
              "tootButton": "#FF5500",
            },
          }
        }
      >
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 17,
            }
          }
          testID="listItemTitle"
        >
          direct
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "transparent",
              "color": undefined,
              "fontSize": 15,
            }
          }
          testID="listItemTitle"
        >
          Post to mentioned users only
        </Text>
      </View>
    </View>
  </View>
</View>
`;
